--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 	<title>Tic Tac Toe</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="icon" type="image/png" href="https://aaronbuckles.com/favicon.png">
+
 	<link href="https://fonts.googleapis.com/css?family=Roboto+Mono|Roboto:400,400i" rel="stylesheet">
-	
-	<link rel="stylesheet" type="text/css" href="resources/game-style.css">
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 	<h1 id="game-title" class="title">Tic Tac Toe</h1>
