JS file linking + images folder

--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
 
 	<canvas id="game-canvas" width="600" height="600"></canvas>
 
-	<script type="text/javascript" src="resources/tic-tac-toe.js"></script>
+	<script type="text/javascript" src="tic-tac-toe.js"></script>
 </body>
 </html>
